--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
 	SPI
 	Wire
 	heltecautomation/ESP32_LoRaWAN@^2.1.1
+	rgot-org/TTN_esp32@^0.1.3
 build_flags = 
 	-D REGION_EU868
 	-D ACTIVE_REGION=LORAMAC_REGION_EU868
