--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ lib_deps =
 	Wire
 	heltecautomation/ESP32_LoRaWAN@^2.1.1
 	rgot-org/TTN_esp32@^0.1.3
+	beegee-tokyo/DHT sensor library for ESPx@^1.18
 build_flags = 
 	-D REGION_EU868
 	-D ACTIVE_REGION=LORAMAC_REGION_EU868
